--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.303.0",
     "next": "14.2.18",
     "next-themes": "^0.2.1",
+    "process": "^0.11.10",
     "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
